--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,8 +20,8 @@ jobs:
     - name: Test
       run: make test
 
-    - name: Coverage
-      run: make coverage
+    # - name: Coverage
+      # run: make coverage
 
 ##
 # stages:
